[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Grzegorz Pawlik <pawlik.gregor@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/gpawlik/rust-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
